k8/proj1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: project-1-service
spec:
  type: LoadBalancer
  selector:
    app: nextjsweb   # This should match the label in your deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000  # Port where your container is running the application
