k8/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nextjs-service
  labels:
    name: ingress-nextjs-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: "localhost"
      http:
        paths:
          - path: /next
            pathType: Prefix
            backend:
              service:
                name: project-1-service  # Next.js service
                port:
                  number: 3000
          - path: /argo
            pathType: Prefix
            backend:
              service:
                name: argocd-server  # Correct service name
                port:
                  number: 8080  # Port where ArgoCD is running
